fix: prevent body scrolling by providing 'overflow: hidden'

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -16,5 +16,5 @@ body {
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
